--- a/bakery.html
+++ b/bakery.html
@@ -5,10 +5,25 @@
 <title>History of Baking</title>
 <link rel="stylesheet" href="style.css">
 </head>
-<br>
-<h1>Mayme's Backery </h1> <br>
-<h2> A timeline of the history of baking</h2>
 
+<body>
+<div class="container">
+<h1>Mayme's Bakery </h1> <br>
+<h2> A timeline on the history of baking</h2>
+</div>
+<div class="timeline"> 
+<div class="timeline-box">
+    <div class="timeline-date">
+        <span> 600 BC</span>
+    </div>
+    <h3> Lets throw it back to ancient times</h3>
+    <p> The history of baking starts here in 600 BC were it is believed the ancient Greeks used to bake bread using using yeast, this eventually led to the creation of enclosed ovens. 
+        The world's oldest oven is currently believed to be around 6500 years old and was discovered in Croatia around 2014</p>
+    <button data-index="0"> continue</button>
+
+</div>
+
+</div>
 
 
 
