--- a/bakery.html
+++ b/bakery.html
@@ -8,7 +8,7 @@
 
 <body>
 <div class="container">
-<h1>Mayme's Bakery </h1> <br>
+<h1>Mayme's Bakery </h1>
 <h2> A timeline on the history of baking</h2>
 </div>
 <div class="timeline"> 
