--- a/bakery.html
+++ b/bakery.html
@@ -19,9 +19,19 @@
     <h3> Lets throw it back to ancient times</h3>
     <p> The history of baking starts here in 600 BC were it is believed the ancient Greeks used to bake bread using using yeast, this eventually led to the creation of enclosed ovens. 
         The world's oldest oven is currently believed to be around 6500 years old and was discovered in Croatia around 2014</p>
-    <button data-index="0"> continue</button>
-
+    <button data-index="0"> continue </button>  </div>
+<div class="timeline-box">
+    <div class="timeline-date"> 
+        <span> 1700 - 1887 </span>
+    </div>
+    <h3> The industrialisation of baking</h3>
+    <p> In 1783, the first recorded chain of bakeries was started by Christopher Potter of Westminster. 
+        Steel roller mills were invented in Switzerland in 1834 but became more popular in the 1870s
+        due to being more economic than the windmills and watermills used at the time. In 1887, the national association of bakers was formed.
+    </p>
+    <button data-index="1"> continue </button>
 </div>
+
 
 </div>
 
