--- a/bakery.html
+++ b/bakery.html
@@ -14,21 +14,29 @@
 <div class="timeline"> 
 <div class="timeline-box">
     <div class="timeline-date">
-        <span> 600 BC</span>
+        <span>600 BC</span>
     </div>
     <h3> Lets throw it back to ancient times</h3>
     <p> The history of baking starts here in 600 BC were it is believed the ancient Greeks used to bake bread using using yeast, this eventually led to the creation of enclosed ovens. 
         The world's oldest oven is currently believed to be around 6500 years old and was discovered in Croatia around 2014</p>
-    <button data-index="0"> continue </button>  </div>
+    <button id="myBtn">Continue</button>
+        <div id="myModal" class="modal">
+        <div class="modal-content">
+    <span class="close">&times;</span>
+    <img scr="img
+    <p>"Ovens and worktables have been discovered in archaeological digs from Turkey (Hacilar) to Palestine (Jericho (Tell es-Sultan)) and date back to 5600 BC."</p>
+    
+</div>
+</div>  
+</div>
+
 <div class="timeline-box">
     <div class="timeline-date"> 
-        <span> 1700 - 1887 </span>
+        <span>2600 B.C.</span>
     </div>
-    <h3> The industrialisation of baking</h3>
-    <p> In 1783, the first recorded chain of bakeries was started by Christopher Potter of Westminster. 
-        Steel roller mills were invented in Switzerland in 1834 but became more popular in the 1870s
-        due to being more economic than the windmills and watermills used at the time. In 1887, the national association of bakers was formed.
-    </p>
+    <h3> Egyptians - Pioneers of Baking</h3>
+    <p>Egyptians were at the forefront of baking which can be traced as far back as 2600 B.C. and are the reason we use yeast in bread today, although scholars debate the exact origin, as evidence suggests that Mesopotamians also produced yeast-risen bread.
+        Egyptian bread was made almost exclusively from emmer wheat, which was more difficult to turn into flour than most other varieties of wheat.</p>
     <button data-index="1"> continue </button>
 </div>
 
